# GenAI_Final

./: README.md  main.py  pyproject.toml
config/: config.yaml
data/: employees.json  projects.json
output/: P100.json  P101.json
src/agents/matching/: aggregator_agent.py  composer_agent.py  domain_matcher.py  employee_matching_agent.py  experience_matcher.py  note_matcher.py  project_requirement_agent.py  router_agent.py  seniority_matcher.py  skill_matcher.py  update_agent.py
src/agents/resume/: resume_extraction_agent.py  resume_persist_agent.py  resume_validation_agent.py
src/graph/: external_candidate_agent.py  matching_workflow.py  resume_workflow.py  state.py
src/memory/: employee_rag.py  employee_store.py  project_store.py
src/models/: employee.py  provider_factory.py
src/prompts/: composer_agent.prompt  domain_matcher.prompt  experience_matcher.prompt  note_matcher.prompt  project_requirement.prompt  router_agent.prompt  skill_matcher.prompt
src/ui/: app.py  employee_list_cli.py
utils/: load_env.py  pdf_utils.py  prompt_loader.py  save_state.py
