[project]
name = "genai-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "faiss-cpu>=1.13.0",
    "fitz>=0.0.1.dev2",
    "google-generativeai>=0.8.5",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langgraph>=1.0.4",
    "openai>=2.8.1",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
